fixed button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ body {
   background-color: #55c57a;
   color: #fff; }
   .btn--green::after {
-    background-color: #fff; }
+    background-color: #28b485; }
 
 .btn::after {
   content: "";
@@ -369,7 +369,7 @@ body {
 
 .form__radio-button {
   height: 3rem;
-  widows: 3rem;
+  width: 3rem;
   border: 5px solid #55c57a;
   border-radius: 50%;
   display: inline-block;
@@ -390,7 +390,7 @@ body {
     opacity: 0;
     transition: opacity .2s; }
 
-.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+.form__radio-input:checked + .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
 .story {
