--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -43,7 +43,7 @@
         color: $color-white;
 
         &::after {
-            background-color: $color-white;
+            background-color: $color-primary-dark;
         }
     }
     &::after {
