--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -54,7 +54,7 @@
     &__radio-input {
         display: none;
     }
-    
+
     &__radio-label {
         font-size: $default-font-size;
         cursor: pointer;
@@ -64,7 +64,7 @@
 
     &__radio-button {
         height: 3rem;
-        widows: 3rem;
+        width: 3rem;
         border: 5px solid $color-primary;
         border-radius: 50%;
         display: inline-block;
@@ -89,7 +89,7 @@
         }
     }
 
-    &__radio-input:checked ~ &__radio-label &__radio-button::after{
+    &__radio-input:checked + &__radio-label &__radio-button::after{
         opacity: 1;
     }
 }
